src/scss/layout/_layout.scss
// Layout styles.
@import "header";
@import "footer";

body {
	background-attachment: fixed;
	background-image: url("../images/distribution--background.svg");
	background-position: 0 center;
	background-repeat: repeat-x;
	background-size: cover;
}

// Sticky footer. See https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
#defaultContainer {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.content-wrapper {
	flex: 1;
}

main {
	margin: 0 auto;
	max-width: 75ch;
	width: 100%;
}

article {
	padding: rem(0) rem(27) rem(27) rem(27);

	h2:not(.h3) {
		border-bottom: rem(5) solid $gold;
	}

	.api-content {
		display: block;

		&::after {
			clear: both;
			content: "";
			display: table;
		}
	}

	/*
	WP selector's customized styles for the WeCount website
 *****************************************************************************/
	figure {
		display: table;
		margin-left: auto;
		margin-right: auto;
	}

	.wp-block-image {
		img {
			height: 100%;
			max-width: 100%;
		}

		figcaption {
			caption-side: bottom;
			display: table-caption;
			font-size: rem(14);
			font-style: italic;
			padding: 1rem 0;
			text-align: center;
		}

		.alignleft {
			float: left;
			margin-right: rem(25);
			margin-top: 0;
		}

		.alignright {
			float: right;
			margin-left: rem(25);
			margin-top: 0;
		}
	}

	.wp-block-image figure .alignfull {
		margin-left: calc(-100vw / 2 + 100% / 2);
		margin-right: calc(-100vw / 2 + 100% / 2);
		max-width: 100vw;
	}

	.wp-block-image figure .alignwide {
		margin-left: rem(-100);
		margin-right: rem(-100);
		max-width: 100%;
	}

	.wp-block-image figure > *.alignwide {
		max-width: 100%;
	}
}

// Hide an element visually without hiding it from screen readers
// Reference: https://tailwindcss.com/docs/screen-readers/#app
.screen-reader-only {
	border-width: 0;
	clip: rect(0, 0, 0, 0);
	height: rem(1);
	margin: rem(-1);
	overflow: hidden;
	padding: 0;
	position: absolute;
	white-space: nowrap;
	width: rem(1);
}

@media screen and (min-width: rem(1024)) {
	body {
		background-position: center;
	}

	.content-wrapper {
		display: grid;
		grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
		grid-template-rows: auto auto;
	}

	main {
		background-color: $white;
		max-width: 130ch;

		article {
			padding: rem(1) rem(60);
			padding-bottom: rem(62);
		}
	}
}

